[package]
name = "lagrange-reminder"
version = "0.1.0"
authors = ["etoal83 <etoal83@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = "1"
serde_derive = "1"